Criação rotina de pauta e votos. Criação de testes de integração com cucumber
